Fixed styling issue.
Bug fixes
- Text overlaps the searchbar
- Text doesn't center on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,7 @@ label img {
     gap: 2em;
     bottom: 0;
 }
+
+.footer span {
+    text-align: center;
+}
