--- a/src/assets/components/ResultCard/ResultCard.css
+++ b/src/assets/components/ResultCard/ResultCard.css
@@ -12,7 +12,7 @@ card {
     width: 80%;
     height: 100%;
 
-    padding: 4em;
+    padding: 5%;
 
     box-sizing: border-box;
 
