--- a/src/assets/components/SearchBar/SearchBar.css
+++ b/src/assets/components/SearchBar/SearchBar.css
@@ -34,7 +34,7 @@ form:focus-within {
 }
 
 .searchBar {
-    width: 30em;
+    width: 80%;
     height: 100%;
 
     border: 0;
